lemon/bison_parser.output
Grammar

    0 $accept: prog $end

    1 prog: prog_list

    2 prog_list: bind prog_list
    3          | FINISH_PARSING

    4 bind: BIND STRING_LIT


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    FINISH_PARSING <token_t> (258) 3
    BIND <token_t> (259) 4
    STRING_LIT <token_t> (260) 4


Nonterminals, with rules where they appear

    $accept (6)
        on left: 0
    prog <token_t> (7)
        on left: 1
        on right: 0
    prog_list < list<token_t> > (8)
        on left: 2 3
        on right: 1 2
    bind <token_t> (9)
        on left: 4
        on right: 2


State 0

    0 $accept: . prog $end

    FINISH_PARSING  shift, and go to state 1
    BIND            shift, and go to state 2

    prog       go to state 3
    prog_list  go to state 4
    bind       go to state 5


State 1

    3 prog_list: FINISH_PARSING .

    $default  reduce using rule 3 (prog_list)


State 2

    4 bind: BIND . STRING_LIT

    STRING_LIT  shift, and go to state 6


State 3

    0 $accept: prog . $end

    $end  shift, and go to state 7


State 4

    1 prog: prog_list .

    $default  reduce using rule 1 (prog)


State 5

    2 prog_list: bind . prog_list

    FINISH_PARSING  shift, and go to state 1
    BIND            shift, and go to state 2

    prog_list  go to state 8
    bind       go to state 5


State 6

    4 bind: BIND STRING_LIT .

    $default  reduce using rule 4 (bind)


State 7

    0 $accept: prog $end .

    $default  accept


State 8

    2 prog_list: bind prog_list .

    $default  reduce using rule 2 (prog_list)
